--- a/code.css
+++ b/code.css
@@ -8,14 +8,14 @@ html{
     scroll-behavior: smooth;
 }
 body{
-    background: #080503 ;
-    color: #6db0e1
+    background: #000000 ;
+    color: #fffcfc
     ;
 }
 #header{
     width: 100%;
     height: 100vh;
-    background-image: url(images/background.png);
+    background-image: url(6E0D81E6-C013-469F-8E50-A72410AF7AE7_2-removebg.png);
     background-size: cover;
     background-position: center;
     background-attachment: fixed;
@@ -42,7 +42,7 @@ nav ul li{
 }
 
 nav ul li a{
-    color: #fff;
+    color: #ffffff;
     text-decoration: none;
     font-size: 18px;
     position: relative;
@@ -51,7 +51,7 @@ nav ul li a::after{
     content: '';
     width: 0;
     height: 3px;
-    background: #ff004f;
+    background: #4267B2;
     position: absolute;
     left: 0;
     bottom: -6px;
@@ -69,7 +69,7 @@ nav ul li a:hover::after{
     margin-top: 20px;
 }
 .header-text h1 span{
-    color: #cc220d;
+    color: #4267B2;
 }
 /* -----------about--------------- */
 #about{
@@ -114,7 +114,7 @@ nav ul li a:hover::after{
     content: '';
     width: 0;
     height: 3px;
-    background: #ff004f;
+    background: #4267B2;
     position: absolute;
     left: 0;
     bottom: -8px;
@@ -130,7 +130,7 @@ nav ul li a:hover::after{
     margin: 10px 0;
 }
 .tab-contents ul li span{
-    color: #b54769;
+    color: #4267B2;
     font-size: 14px;
 }
 .tab-contents{
@@ -151,7 +151,7 @@ nav ul li a:hover::after{
     margin-top: 50px;
 }
 .services-list div{
-    background: #262626;
+    background: #252526;
     padding: 40px;
     font-size: 13px;
     font-weight: 300;
@@ -175,7 +175,7 @@ nav ul li a:hover::after{
     display: inline-block;
 }
 .services-list div:hover{
-    background: #ff004f;
+    background: #4267B2;
     transform: translateY(-10px);
 }
 /* -------portfolio----------- */
@@ -202,7 +202,7 @@ nav ul li a:hover::after{
 .layer{
     width: 100%;
     height: 0;
-    background: linear-gradient(rgba(0,0,0,0.6), #ff004f);
+    background: linear-gradient(rgba(0,0,0,0.6), #4267B2);
     border-radius: 10px;
     position: absolute;
     left: 0;
@@ -223,7 +223,7 @@ nav ul li a:hover::after{
 }
 .layer a{
     margin-top: 20px;
-    color: #ff004f;
+    color: #4267B2;
     text-decoration: none;
     font-size: 18px;
     line-height: 60px;
@@ -243,7 +243,7 @@ nav ul li a:hover::after{
     display: block;
     margin: 50px auto;
     width: fit-content;
-    border: 1px solid #ff004f;
+    border: 1px solid #4267B2;
     padding: 14px 50px;
     border-radius: 6px;
     text-decoration: none;
@@ -251,7 +251,7 @@ nav ul li a:hover::after{
     transition: background 0.5s;
 }
 .btn:hover{
-    background: #ff004f;
+    background: #4267B2;
 }
 
 /* ---------contact-------- */
@@ -265,7 +265,7 @@ nav ul li a:hover::after{
     margin-top: 30px;
 }
 .contact-left p i{
-    color: #ff004f;
+    color: #4267B2;
     margin-right: 15px;
     font-size: 25px;
 }
@@ -281,12 +281,12 @@ nav ul li a:hover::after{
     transition: transform 0.5s;
 }
 .social-icons a:hover{
-    color: #ff004f;
+    color: #4267B2;
     transform: translateY(-5px);
 }
 .btn.btn2{
     display: inline-block;
-    background: #ff004f;
+    background: #4267B2;
 }
 .contact-right form{
     width: 100%;
@@ -317,10 +317,10 @@ form .btn2{
     margin-top: 20px;
 }
 .copyright i{
-    color: #ff004f;
+    color: #4267B2;
 }
 .copyright a{
-    color: #ff004f;
+    color: #4267B2;
     text-decoration: none;
 }
 /* -----------------css for small screens--------- */
@@ -344,7 +344,7 @@ nav .fas{
         font-size: 25px;
     }
     nav ul{
-        background: #ff004f;
+        background: #4267B2;
         position: fixed;
         top: 0;
         right: -200px;
